--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div {
 }
 .display {
   border: solid 1px #ddd;
-  padding: 20px;
+  padding: 20px 20px 10px;
   margin: 10px 0;
   text-align: end;
   background-color: white;
