--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@ div {
   border-radius: 5px;
 }
 .calculator {
-  width: 350px;
+  width: 300px;
   margin: 40px auto;
   border: solid 1px black;
-  padding: 20px;
+  padding: 10px;
 }
 .display {
   border: solid 1px #ddd;
   padding: 20px 20px 10px;
   margin: 10px 0;
+  height: 60px;
   text-align: end;
   background-color: white;
+}
+h2 {
+  margin-top: 10px;
 }
 .keypad {
   padding: 10px;
@@ -21,18 +25,18 @@ div {
 .key-row {
   display: flex;
   justify-content: space-between;
-  margin:  0 0 20px;
+  margin:  0 0 10px;
 }
 .key {
   text-align: center;
-  width: 30px;
+  width: 20px;
   height: 30px;
   padding: 15px 20px 0;
-  border: solid 1px #ddd;
+  border: solid 1px #aaa;
 }
 .clear, .delete {
-  width: 110px;
+  width: 93px;
 }
 .key:hover {
-  box-shadow: 1px 1px 3px #ccc;
+  box-shadow: 1px 1px 4px #888;
 }
